Application/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filestore-app
  namespace: filestore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filestore-app
  template:
    metadata:
      labels:
        app: filestore-app
    spec:
      containers:
        - name: app
          image: kpwenzel/filestore-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
      volumes:
        - name: config
          configMap:
            name: filestore-config
