Application/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filestore-service
  namespace: filestore
spec:
  selector:
    app: filestore-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
