Application/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filestore-route
  namespace: filestore
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`files.dexidevs.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: filestore-service
          port: 80
